ems/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ems-service
  namespace: ems
spec:
  selector:
    app: ems
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
