ems/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ems-ingress
  namespace: ems
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ems.beyond-infinity.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ems-service
                port:
                  number: 8080
